--- a/renderscript-toolkit/build.gradle
+++ b/renderscript-toolkit/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    compileSdk 31
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 31
+        minSdk 19
+        targetSdk 31
         versionCode 1
         versionName "1.0"
         
