--- a/renderscript-toolkit/build.gradle
+++ b/renderscript-toolkit/build.gradle
@@ -4,14 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 34
 
     defaultConfig {
         minSdk 19
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
-        
+        targetSdk 33
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
         externalNativeBuild {
@@ -39,10 +37,11 @@ android {
             path file('src/main/cpp/CMakeLists.txt')
         }
     }
+    namespace 'com.google.android.renderscript'
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
 }
